--- a/ng-fundamentals/src/app/events/events-list.component.html
+++ b/ng-fundamentals/src/app/events/events-list.component.html
@@ -1,15 +1,7 @@
 <div>
   <h1>Upcoming Angular Events</h1>
-  <hr/>
-  <div class="well hoverwell thumbnail">
-    <h2>{{event.name}}</h2>
-    <div>Date: {{event.date}}</div>
-    <div>Time: {{event.time}}</div>
-    <div>Price: £{{event.price}}</div>
-    <div>
-      <span>Location: {{event.location.address}}</span>
-      <span>&nbsp;</span>
-      <span>{{event.location.city}}, {{event.location.country}}</span>
-    </div>
-  </div>
+  <hr />
+  <event-thumbnail #thumbnail (eventClick)="handleEventClicked($event)" [event]="event1"></event-thumbnail>
+  <h3>{{thumbnail.someProperty}}</h3>
+  <button class = "btn btn-primary" (click)="thumbnail.logFoo()">Log me some foo</button>
 </div>
